Works, no error handling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(netstore C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(netstore-server serwer.c)
-add_executable(netstore-client klient.c)
+add_executable(netstore-server serwer.c structs.h)
+add_executable(netstore-client klient.c structs.h)
